--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -23,6 +23,12 @@
 
             <div id="addQuoteContainer">
             </div>
+
+            <div id="storageControls">
+                <button id="exportJson">Export Quotes (JSON)</button>
+                <label for="importFile" id="importFileLabel">Import Quotes (JSON):</label>
+                <input type="file" id="importFile" accept=".json" title="Import JSON file" placeholder="Choose a JSON file..." />
+            </div>
         </main>
     </div>
 
