--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -17,6 +17,10 @@
             <div id="quoteDisplay">
             </div>
 
+            <select id="categoryFilter" title="Select a category">
+              <option value="all">All Categories</option>
+              </select>
+
             <button id="newQuote">Show New Quote</button>
 
             <hr>
@@ -35,4 +39,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
