--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -36,6 +36,8 @@
         </main>
     </div>
 
+    <div id="syncNotification"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
