Made some improvements across the files

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -18,8 +18,8 @@
             </div>
 
             <select id="categoryFilter" title="Select a category">
-              <option value="all">All Categories</option>
-              </select>
+                <option value="all">All Categories</option>
+            </select>
 
             <button id="newQuote">Show New Quote</button>
 
@@ -30,14 +30,29 @@
 
             <div id="storageControls">
                 <button id="exportJson">Export Quotes (JSON)</button>
-                <label for="importFile" id="importFileLabel">Import Quotes (JSON):</label>
-                <input type="file" id="importFile" accept=".json" title="Import JSON file" placeholder="Choose a JSON file..." />
+                <label for="importFile" id="importFileLabel">Import Quotes (JSON)</label>
+                <input type="file" id="importFile" accept=".json" />
+                <!-- Add manual sync button -->
+                <button id="manualSync">Sync with Server</button>
+                <span id="lastSyncTime"></span>
             </div>
         </main>
     </div>
 
-    <div id="syncNotification"></div>
-    
+    <!-- Add notification container -->
+    <div id="syncNotification" class="notification"></div>
+    <div id="conflictDialog" class="modal">
+        <div class="modal-content">
+            <h3>Conflict Detected</h3>
+            <p id="conflictMessage"></p>
+            <div class="conflict-choices">
+                <button id="keepLocal">Keep Local</button>
+                <button id="keepServer">Keep Server</button>
+                <button id="keepBoth">Keep Both</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
